--- a/todo_app/index.html
+++ b/todo_app/index.html
@@ -8,8 +8,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #ffffff;
-            margin: 0;
+            background-color: lightpink;
+            margin: 100px;
             padding: 0;
         }
         .container {
